--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "mern-project2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Mern Project for technotes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+     "dev": "nodemon server"
   },
   "keywords": [],
   "author": "",
